<resources>

    <string name="app_name">Tutorpal</string>
        

    <!--login and register strings-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="usertyperegister_prompt">Register as</string>


    <!--Home navigation strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
     
    <string-array name="nav_item_activity_titles">
              
        <item>Home</item>
              
        <!--<item>Profile</item>-->
              
        <item>Inbox</item>
              
        <item>Notifications</item>
              
        <item>Settings</item>
          
    </string-array>

     
    <string name="activity_title_about_us">About Us</string>
     
    <string name="activity_title_privacy_policy">Privacy Policy</string>
     
    <string name="action_clear_all">Clear All</string>
     
    <string name="action_logout">Logout</string>
     
    <string name="action_mark_all_read">Mark All as Read</string>
     
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Settings-->
    <string name="prof_settings">Profile settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">Create new username</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="change_full_name">Change Full name</string>
    <string name="change_username">Change Username</string>
    <string name="learning_made_easy">LEARNING MADE EASY</string>
    <string name="password">Password</string>


    <!--From firebase CRUD-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="action_settings">Settings</string>

    <string name="profile_name">Ainul Fitiri</string>
    <string name="country_location">Brunei</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>


    <string name="profile_names">Display name</string>
    <string name="induce_smile">Ainul Jasni</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>
    <string name="earnings">Earnings</string>
    <string name="schedule">Schedule</string>
    <string name="rating_and_review">Rating and reviews</string>
    <string name="birth_date_example">eg. 01/01/1995</string>
    <string name="apply_for_tutor">Apply for tutor</string>
    <string name="account_settings">Account Settings</string>
    <string name="reviews">Reviews</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot password</string>


</resources>
